--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
   color: #61dafb;
 }
 
+body, html  {
+  background-color: #a1a1a1;
+  height: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
